# DataOps_Assistant

./: .gitignore  Makefile  README.md  pyproject.toml
app/: a1_parser.py  a2_generator.py  catalog.py  checks.py  dag_template.py.j2  etl_ops.py  io_sources.py  router.py  spec_schema.py
docker/: Dockerfile  docker-compose.yml  requirements.txt
tests/: __init__.py  conftest.py  test_a1_parser.py  test_a2_generator.py  test_etl_ops.py  test_smoke.py  test_spec_validation.py
